overflow fix on cards

--- a/style.scss
+++ b/style.scss
@@ -224,6 +224,7 @@ a {
             margin: 10px;
             padding: 20px;
             border:1px solid #000;
+            overflow:auto;
             h3 {
               margin-top:0;
             }
